tests/machine/x/java/len_map.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramslen_map2676355017/001/Main.java:12: error: cannot find symbol
	System.out.println(new AB(1, 2).size());
	                               ^
  symbol:   method size()
  location: class AB
1 error


  1| print(len({"a":1, "b":2}))
  2| 